# beatwave

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  animated.hpp  animation.hpp  captures.cpp  default.nix  game.cpp  game.hpp  level.xml  level.xsd  lineartransition.hpp  lineartransitionbuilder.hpp  main.cpp  player.hpp  replay.txt  seqcombinator.hpp  sequencecombinator.hpp  sequencecombinatorbuilder.hpp  state.hpp  transition.hpp  transitionable.hpp  tunnel.cpp  tunnel.hpp  tunnel.txt  tunnelgenerator.cpp  tunnelgenerator.hpp  util.cpp  util.hpp
cmake/: FindPugiXML.cmake
src/: animated.hpp  captures.cpp  captures.hpp  game.cpp  game.hpp  lineartransition.hpp  lineartransitionbuilder.hpp  main.cpp  player.hpp  seqcombinator.hpp  tunnel.cpp  tunnelgenerator.cpp  util.cpp
src/beatwave/: circle.cpp  circle.hpp  config.hpp  defaultdrumset.cpp  defaultdrumset.hpp  drop.cpp  drop.hpp  drumset.hpp  drumsetexception.cpp  drumsetexception.hpp  emptycircle.cpp  emptycircle.hpp  filledcircle.cpp  filledcircle.hpp  game.cpp  game.hpp  level.cpp  level.hpp  levelend.cpp  levelend.hpp  main.cpp  pathcorrector.cpp  pathcorrector.hpp  pathcorrector2.hpp  pathcorrectorswarm.cpp  pathcorrectorswarm.hpp  player.cpp  player.hpp  splat.cpp  splat.hpp  tunnel.cpp  tunnel.hpp
src/core/: animated.hpp  animatedgroup.hpp  animatedtuple.hpp  animation.hpp  captures.cpp  captures.hpp  dsl.hpp  floatcolor.cpp  floatcolor.hpp  forever.hpp  lineartransition.hpp  lineartransitionbuilder.hpp  math.hpp  nestedgroup.hpp  openlineartransition.hpp  player.hpp  repeat.hpp  seqcombinator.hpp  seqcombinatorbuilder.hpp  set.hpp  tunnel.cpp  tunnel.hpp  tunnelvector.cpp  tunnelvector.hpp  util.cpp  util.hpp
src/core/animations/: forever.hpp  lineartransition.hpp  map.hpp  nil.hpp  openlineartransition.hpp  repeat.hpp  seqcombinator.hpp  set.hpp  sleep.hpp
src/core/dsl/: lineartransitionbuilder.hpp  seqcombinatorbuilder.hpp
src/tunnelgenerator/: main.cpp
test/: CMakeLists.txt
test/beatwave/: testplayer.cpp
test/core/: testanimated.cpp  testfloatcolor.cpp  testforever.cpp  testmap.cpp  testnil.cpp  testrepeat.cpp  testseqcombinator.cpp  testset.cpp  testsleep.cpp
test/helpers/: countanimation.hpp  mockdrumset.hpp
